fix: fixed a mobile scrolling gap, and layout of about section

--- a/src/app.scss
+++ b/src/app.scss
@@ -21,7 +21,7 @@ a {
 }
 
 section {
-  height: 100svh;
+  height: 100vh;
   scroll-snap-align: center;
   overflow: hidden;
 }
