--- a/src/components/about/about.scss
+++ b/src/components/about/about.scss
@@ -47,7 +47,7 @@
         font-size: 20px;
 
         @include mobile {
-          font-size: 16px;
+          font-size: 14px;
         }
       }
 
