--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -23,7 +23,7 @@
     gap: 40px;
 
     @include mobile {
-      margin-top: 120px;
+      margin-top: 80px;
       gap: 20px;
       text-align: center;
       align-items: center;
@@ -70,7 +70,7 @@
 
     @include mobile {
       width: 100%;
-      padding: 50px;
+      padding: 40px;
     }
 
     .phoneSvg {
